--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <h1>Biggest heading</h1>   
     <h2>Second biggest heading</h2> 
     <p>This is normal text.We are going to use this to create the rest of our website.</p>
-    <smaller>This is a very small text.</smaller>
+    <small>This is a very small text.</small>
     <hr>
     <h2>@containers</h2>
     <h3>fluid containers</h3>
-    <p>This is a fluid container. It will go full length of the page with some margin.</p>
+    <div>This is a fluid container. It will go full length of the page with some margin.</div>
     <h3>center containers</h3>
-    <p>This is a center container. It will go till a given width and center content.</p>
+    <div>This is a center container. It will go till a given width and center content.</div>
     <hr>
     <h2>@links</h2>
     <a target =_blank href="/">Primary Link</a> <a target=_blank href="/">Secondary Link</a>
@@ -28,8 +28,48 @@
     <h2>@lists</h2>
     <h3>unordered lists</h3>
     <p>We don't want to show bullets in the unordered lists.We'll remove that with CSS.</p>
-    <ul>list 1</ul>
-    <ul>list 2</ul>
-    <ul>list 3</ul>
+    <ul>
+        <li>list 1</li>
+        <li>list 2</li>
+        <li>list 3</li>
+    </ul>
+    <h3>Inline unordered lists</h3>
+    <ul>
+        <li>inline list 1</li>
+        <li>inline list 2</li>
+        <li>inline list 3</li>
+    </ul>
+    <h3>Reverse ordered lists</h3>
+    <p>It will go in reverse order</p>
+    <ol>
+        <li> list 1</li>
+        <li> list 2</li>
+        <li> list 3</li>
+    </ol>
+    <h2>@nav</h2>
+    <nav>Navigation is used on the top of the page to go to different pages</nav>
+    <div>My Page</div>
+    <ul>
+        <li><a href="/">home</a></li>
+        <li><a href="/">blogs</a></li>
+        <li><a href="/">projects</a></li>
+    </ul>
+    <hr>
+    <h2>@header</h2>
+    <header>
+        <img src="images/hero.svg">
+         <h3>Web Developer</h3>
+
+    </header>
+
+
+
+
+
+
+
+
+
+    <div style="height: 30vh;" ></div>
 </body>
 </html> 
