--- a/index.html
+++ b/index.html
@@ -59,17 +59,27 @@
     <header>
         <img src="images/hero.svg">
          <h3>Web Developer</h3>
-
     </header>
-
-
-
-
-
-
-
-
-
-    <div style="height: 30vh;" ></div>
+    <hr>
+    <h2>@section</h2>
+    <p>A section is used to seperate parts of pages.In marketing websites you would have seen a header followed by sections of features,team.pricing,contact info etc.</p>
+    <section>
+        <h3>@white section</hr>
+         <p>This will have white bg </p>
+    </section>
+    <section>
+        <h3>@grey section</hr>
+         <p>This will expand to both sides with little margin</p>
+    </section>
+    <hr>
+    <h2>@footer</h2>
+    <footer>
+       <div>Header inside footer</div>
+       <ul>
+       <li>option1</li>
+       <li>option2</li>
+       <li>option3</li>
+       </ul>
+    </footer>
 </body>
 </html> 
